# PSGDSVMC

./: ArgReader.cpp  ArgReader.h  CMakeLists.txt  DataSet.cpp  DataSet.h  Initializer.cpp  Initializer.h  Makefile  Makefile.v  Matrix.cpp  Matrix.h  Matrix1.cpp  Matrix1.h  OptArgs.cpp  OptArgs.h  PSGD.cpp  PSGD.h  PSGDC__  Predict.cpp  Predict.h  README.md  ResourceManager.cpp  ResourceManager.h  SGD.cpp  SGD.h  Test.cpp  Test.h  Util.cpp  Util.h  commcomp.yaml  datasource.yaml  epoch_moving_average.py  epoch_mv_avg_seq.py  epoch_sort_comm_comp_proc_0.py  epochlog_average.py  epochlog_refactor.py  epochlogsummary.yaml  generate_latex_acc_n_cost_figure_script.py  generate_plot_script.py  generate_seq_par_comparison_script.py  (+12 more)
